--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,28 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .smooth-text-rendering{
+    will-change: transform, opacity !important;
+    font-smoothing: antialiased !important;
+    -webkit-font-smoothing:subpixel-antialiased !important;
+    -webkit-backface-visibility: hidden !important;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-optical-sizing: auto;
+  scroll-behavior: smooth;
+
+  will-change: transform, opacity !important;
+  font-smoothing: antialiased !important;
+  -webkit-font-smoothing:subpixel-antialiased !important;
+  -webkit-backface-visibility: hidden !important;
+  
+
+
 }
 
 @layer utilities {
@@ -31,3 +33,179 @@ body {
     text-wrap: balance;
   }
 }
+
+
+.navbar-box-shadow{
+  -webkit-box-shadow: 0px 6px 12px 3px rgba(61,61,61,0.09);
+  -moz-box-shadow: 0px 6px 12px 3px rgba(61,61,61,0.09);
+  box-shadow: 0px 6px 12px 3px rgba(61,61,61,0.09);
+}
+
+
+
+
+.home-qrcode-container{
+  transform:
+    rotateX(51deg)
+    rotateZ(43deg);
+  transform-style: preserve-3d;
+  border-radius: 32px;
+  box-shadow:
+    1px 1px 0 1px #f9f9fb,
+    -1px 0 28px 0 rgba(34, 33, 81, 0.01),
+    28px 28px 28px 0 rgba(34, 33, 81, 0.25);
+  height: max-content;
+  
+
+    img{
+      width: 150px;
+      background: #ffffff;
+    }
+}
+.iphone, .tablet-kiosk{
+  /* background-color: #7371ee; */
+  background: linear-gradient(60deg, #7371ee 1%,#a1d9d6 100%);
+  position: relative;
+}
+.iphone-rim{
+  -webkit-box-shadow: inset 4px 0px 2px 0px rgba(119,119,119,1);
+-moz-box-shadow: inset 4px 0px 2px 0px rgba(119,119,119,1);
+box-shadow: inset 4px 0px 2px 0px rgba(119,119,119,1);
+}
+.kiosk-rim{
+  -webkit-box-shadow: inset -4px 0px 2px 0px rgba(119,119,119,1);
+-moz-box-shadow: inset -4px 0px 2px 0px rgba(119,119,119,1);
+box-shadow: inset -4px 0px 2px 0px rgba(119,119,119,1);
+}
+.iphone::before{
+  position: absolute;
+  content: "";
+  top: 0px;
+  width: 53%;
+  height: 23px;
+  background-color: #1f1f1f;
+  border-radius: 0px 0px 20px 20px;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
+.iphone-speaker, .iphone-camera{
+  position: absolute;
+  display: block;
+  color: transparent;
+}
+.iphone-speaker{    
+
+  top: 0px;
+  left: 50%;
+  transform: translate(-50%, 3px);
+  height: 8px;
+  width: 15%;
+  background-color: #101010;
+  border-radius: 8px;
+  box-shadow: inset 0px -3px 3px 0px rgba(256, 256, 256, 0.2);
+}
+.iphone-camera{
+  left: 60%;
+  top: 0px;
+  transform: translate(60%, 1px);
+  width: 12px;
+  height: 12px;
+  background-color: #101010;
+  border-radius: 12px;
+  box-shadow: inset 0px -3px 2px 0px rgba(256, 256, 256, 0.2);
+}
+.iphone-camera::after{
+  content: '';
+  position: absolute;
+  background-color: #2d4d76;
+  width: 6px;
+  height: 6px;
+  top: 2px;
+  left: 2px;
+  top: 3px;
+  left: 3px;
+  display: block;
+  border-radius: 4px;
+  box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.5);
+}
+.iphone-screen-top{
+  position: absolute;
+  top: 0;
+  display: flex;
+  align-items: center;
+  padding: 6px 13px 0 13px;
+  color: #ffffff;
+  justify-content: space-between;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height:23px;
+}
+
+.kiosk-stand{
+  perspective: 300px;
+  -webkit-transform: scale3d(1, 1, 2) rotate3d(1, 0, 0, 60deg); /* Chrome, Safari, Opera */
+  transform: scale3d(1, 1, 2) rotate3d(1, 0, 0, 60deg); /* Standard syntax */
+  position: relative;
+  
+}
+.kiosk-stand::before{
+  content: "";
+  position: absolute;
+  top: -85px;
+  left: 50%;
+  transform: translateX(-50%);
+  
+  width: 100px;
+  height: 130px;
+  background: #333333;
+  -webkit-box-shadow: inset 0px 10px 5px 0px rgba(0,0,0,0.75), inset 0px -8px 5px 0px rgba(119,119,119,1),  inset -2px 0px 4px 0px rgba(119,119,119,1), -2px 0px 1px 0px rgba(41,41,41,1);
+-moz-box-shadow: inset 0px 10px 5px 0px rgba(0,0,0,0.75), inset 0px -8px 5px 0px rgba(119,119,119,1),  inset -2px 0px 4px 0px rgba(119,119,119,1), -2px 0px 1px 0px rgba(41,41,41,1);
+box-shadow: inset 0px 10px 5px 0px rgba(0,0,0,0.75), inset 0px -8px 5px 0px rgba(119,119,119,1),  inset -2px 0px 4px 0px rgba(119,119,119,1), -2px 0px 1px 0px rgba(41,41,41,1);
+
+
+}
+
+.home-qr-code-container::before{
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  opacity: 0;
+  border-radius: 100%;
+  background:#E34234;
+  animation: qr-code-scan-ani 1.1s 1s linear forwards;
+}
+
+.home-start-icons-bg{
+  background-clip: padding-box, border-box;
+}
+
+/*UI*/
+.my-bg-shadow{
+  box-shadow:
+  0px 0px 1.1px -7px rgba(0, 0, 0, 0.032),
+  0px 0px 3.8px -7px rgba(0, 0, 0, 0.048),
+  0px 0px 17px -7px rgba(0, 0, 0, 0.08);
+}
+
+
+/*Animations for Home page Solution: QR code*/
+@keyframes qr-code-scan-ani{
+  0%{
+    opacity: 0;
+    bottom: 0;
+  }
+  5%{
+    opacity: 1;
+    bottom: 0;
+  }
+  100%{
+    opacity: 1;
+    bottom: 100%;
+  }
+}
+
