/features - additional feautres - option label video

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -273,3 +273,13 @@ box-shadow: inset 0px 10px 5px 0px rgba(0,0,0,0.75), inset 0px -8px 5px 0px rgba
 }
 
 
+.videotest::-webkit-scrollbar {
+  background-color: transparent;
+  width: 20px;
+}
+.videotest::-webkit-scrollbar-thumb {
+  background-color: #b0b0b0;
+  border-radius: 2rem;
+  border: 7px solid transparent;
+  background-clip: content-box;
+}
