--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,7 @@
 }
 .iphone{
   /* background-color: #7371ee; */
-  background: linear-gradient(60deg, #7371ee 1%,#a1d9d6 100%);
+  /* background: linear-gradient(60deg, #7371ee 1%,#a1d9d6 100%); */
   position: relative;
 }
 /* .tablet-kiosk{
@@ -137,7 +137,7 @@
   display: flex;
   align-items: center;
   padding: 6px 13px 0 13px;
-  color: #ffffff;
+  
   justify-content: space-between;
   position: absolute;
   left: 0;
